# web-ai-mcp

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  check_gemini.py  docker-compose.yml  entrypoint.sh  html_to_markdown.py  pyproject.toml  requirements.txt  run.sh  server.py  test_client.py
.github/workflows/: ci.yml
data/: debug_page.html  debug_target.html
src/: __init__.py  server.py
src/browser/: __init__.py  captcha.py  instance.py  manager.py  stealth.py  subagent_manager.py
src/tools/: __init__.py  extraction.py  gemini_chat.py  interaction.py  navigation.py  stealth_search.py
templates/: README.md
tests/: selectors.py  test_api.py  test_browser.py  test_browser_instance.py  test_browser_manager.py  test_ddg.py  test_extraction.py  test_gemini_chat.py  test_html_to_md.py  test_interaction.py  test_navigation.py  test_stealth.py  test_stealth_search.py  test_subagent_manager.py
tests/mocks/: ddg_pages.py
