[project]
name = "web-ai-mcp"
version = "0.1.0"
description = "Web AI MCP server integrating DuckDuckGo AI Chat via Patchright"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "patchright>=1.58.0",
    "python-dotenv>=1.2.1",
    "xvfbwrapper>=0.2.20",
    "pyvirtualdisplay>=3.0",
    "html2text>=2024.2.26",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
